--- a/SpellGUIV2/MainWindow.xaml
+++ b/SpellGUIV2/MainWindow.xaml
@@ -458,52 +458,52 @@
             </TabItem>
             <TabItem Header="{DynamicResource Items}">
                 <Grid>
-                    <Label Content="Item Tool 1:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="90,35,0,0"/>
+                    <Label Content="{DynamicResource labItemTool1}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="90,35,0,0"/>
                     <c:ThreadSafeTextBox x:Name="Totem1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="68,61,0,0" Width="120" TextWrapping="Wrap"/>
-                    <Label Content="Item Tool 2:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="90,97,0,0"/>
+                    <Label Content="{DynamicResource labItemTool2}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="90,97,0,0"/>
                     <c:ThreadSafeTextBox x:Name="Totem2" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="68,123,0,0" Width="120" TextWrapping="Wrap"/>
-                    <Label Content="Reagent 1:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="85,371,0,0"/>
+                    <Label Content="{DynamicResource labReagent1}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="85,371,0,0"/>
                     <c:ThreadSafeTextBox x:Name="Reagent1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="58,397,0,0" Width="120" TextWrapping="Wrap"/>
-                    <Label Content="Reagent 2:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="225,371,0,0"/>
+                    <Label Content="{DynamicResource labReagent2}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="225,371,0,0"/>
                     <c:ThreadSafeTextBox x:Name="Reagent2" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="198,397,0,0" Width="120" TextWrapping="Wrap"/>
-                    <Label Content="Reagent 3:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="365,371,0,0"/>
+                    <Label Content="{DynamicResource labReagent3}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="365,371,0,0"/>
                     <c:ThreadSafeTextBox x:Name="Reagent3" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="338,397,0,0" Width="120" TextWrapping="Wrap"/>
-                    <Label Content="Reagent 4:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="505,371,0,0"/>
+                    <Label Content="{DynamicResource labReagent4}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="505,371,0,0"/>
                     <c:ThreadSafeTextBox x:Name="Reagent4" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="478,397,0,0" Width="120" TextWrapping="Wrap"/>
-                    <Label Content="Reagent 5:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="647,371,0,0"/>
+                    <Label Content="{DynamicResource labReagent5}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="647,371,0,0"/>
                     <c:ThreadSafeTextBox x:Name="Reagent5" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="620,397,0,0" Width="120" TextWrapping="Wrap"/>
-                    <Label Content="Reagent 6:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="787,371,0,0"/>
+                    <Label Content="{DynamicResource labReagent6}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="787,371,0,0"/>
                     <c:ThreadSafeTextBox x:Name="Reagent6" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="760,397,0,0" Width="120" TextWrapping="Wrap"/>
-                    <Label Content="Reagent 7:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="927,371,0,0"/>
+                    <Label Content="{DynamicResource labReagent7}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="927,371,0,0"/>
                     <c:ThreadSafeTextBox x:Name="Reagent7" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="900,397,0,0" Width="120" TextWrapping="Wrap"/>
-                    <Label Content="Reagent 8:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="1067,371,0,0"/>
+                    <Label Content="{DynamicResource labReagent8}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="1067,371,0,0"/>
                     <c:ThreadSafeTextBox x:Name="Reagent8" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="1040,397,0,0" Width="120" TextWrapping="Wrap"/>
-                    <Label Content="Reagent Count 1:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="67,445,0,0"/>
+                    <Label Content="{DynamicResource labReagentCount1}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="67,445,0,0"/>
                     <c:ThreadSafeTextBox x:Name="ReagentCount1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="58,471,0,0" Width="120" TextWrapping="Wrap"/>
-                    <Label Content="Reagent Count 2:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="207,445,0,0"/>
+                    <Label Content="{DynamicResource labReagentCount2}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="207,445,0,0"/>
                     <c:ThreadSafeTextBox x:Name="ReagentCount2" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="198,471,0,0" Width="120" TextWrapping="Wrap"/>
-                    <Label Content="Reagent Count 3:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="347,445,0,0"/>
+                    <Label Content="{DynamicResource labReagentCount3}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="347,445,0,0"/>
                     <c:ThreadSafeTextBox x:Name="ReagentCount3" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="338,471,0,0" Width="120" TextWrapping="Wrap"/>
-                    <Label Content="Reagent Count 4:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="487,445,0,0"/>
+                    <Label Content="{DynamicResource labReagentCount4}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="487,445,0,0"/>
                     <c:ThreadSafeTextBox x:Name="ReagentCount4" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="478,471,0,0" Width="120" TextWrapping="Wrap"/>
-                    <Label Content="Reagent Count 5:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="629,445,0,0"/>
+                    <Label Content="{DynamicResource labReagentCount5}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="629,445,0,0"/>
                     <c:ThreadSafeTextBox x:Name="ReagentCount5" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="620,471,0,0" Width="120" TextWrapping="Wrap"/>
-                    <Label Content="Reagent Count 6:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="769,445,0,0"/>
+                    <Label Content="{DynamicResource labReagentCount6}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="769,445,0,0"/>
                     <c:ThreadSafeTextBox x:Name="ReagentCount6" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="760,471,0,0" Width="120" TextWrapping="Wrap"/>
-                    <Label Content="Reagent Count 7:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="909,445,0,0"/>
+                    <Label Content="{DynamicResource labReagentCount7}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="909,445,0,0"/>
                     <c:ThreadSafeTextBox x:Name="ReagentCount7" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="900,471,0,0" Width="120" TextWrapping="Wrap"/>
-                    <Label Content="Reagent Count 8:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="1049,445,0,0"/>
+                    <Label Content="{DynamicResource labReagentCount8}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="1049,445,0,0"/>
                     <c:ThreadSafeTextBox x:Name="ReagentCount8" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="1040,471,0,0" Width="120" TextWrapping="Wrap"/>
-                    <Label Content="Equipped Item Class:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="339,35,0,0"/>
+                    <Label Content="{DynamicResource labEquippedItemClass}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="339,35,0,0"/>
                     <c:ThreadSafeComboBox x:Name="EquippedItemClass" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="339,61,0,0" Width="120" SelectionChanged="ComboBox_SelectionChanged"/>
-                    <Label Content="Equipped Item Inventory Type:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="964,35,0,0"/>
+                    <Label Content="{DynamicResource labEquippedItemInventoryType}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="964,35,0,0"/>
                     <ScrollViewer Margin="909,61,99,346">
                         <StackPanel Name="EquippedItemInventoryTypeGrid" IsEnabled="False"/>
                     </ScrollViewer>
                     <ScrollViewer Margin="607,61,413,346">
                         <StackPanel x:Name="EquippedItemSubClassGrid" IsEnabled="False"/>
                     </ScrollViewer>
-                    <Label Content="Equipped Item SubClass:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="666,35,0,0"/>
+                    <Label Content="{DynamicResource labEquippedItemSubClass}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="666,35,0,0"/>
                 </Grid>
             </TabItem>
             <TabItem Header="{DynamicResource Flags}">
