--- a/SpellGUIV2/MainWindow.xaml
+++ b/SpellGUIV2/MainWindow.xaml
@@ -511,15 +511,15 @@
                     <TabControl VerticalAlignment="Top" HorizontalAlignment="Left" Height="647" Width="1264">
                         <TabItem Header="{DynamicResource Interrupts}">
                             <Grid>
-                                <Label Content="Interrupt Flags:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="125,10,0,0"/>
+                                <Label Content="{DynamicResource labInterruptFlags}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="125,10,0,0"/>
                                 <ScrollViewer Margin="10,36,934,0" ScrollViewer.VerticalScrollBarVisibility="Disabled">
                                     <StackPanel Name="InterruptFlagsGrid"/>
                                 </ScrollViewer>
-                                <Label Content="Aura Interrupt Flags:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="495,10,0,0"/>
+                                <Label Content="{DynamicResource labAuraInterruptFlags}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="495,10,0,0"/>
                                 <ScrollViewer Margin="395,36,549,0">
                                     <StackPanel Name="AuraInterruptFlagsGrid"/>
                                 </ScrollViewer>
-                                <Label Content="Channel Interrupt Flags:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="892,10,0,0"/>
+                                <Label Content="{DynamicResource labChannelInterruptFlags}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="892,10,0,0"/>
                                 <ScrollViewer Margin="799,36,145,100" ScrollViewer.VerticalScrollBarVisibility="Disabled">
                                     <StackPanel Name="ChannelInterruptFlagsGrid"/>
                                 </ScrollViewer>
@@ -527,19 +527,19 @@
                         </TabItem>
                         <TabItem Header="{DynamicResource Attributes}">
                             <Grid Name="AttributesTabGrid">
-                                <Label Content="Attributes:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="92,8,0,0"/>
+                                <Label Content="{DynamicResource labAttributes}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="92,8,0,0"/>
                                 <ScrollViewer Margin="10,35,939,10">
                                     <StackPanel Name="Attributes1"/>
                                 </ScrollViewer>
-                                <Label Content="Attributes Ex:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="400,8,0,0"/>
+                                <Label Content="{DynamicResource labAttributesEx}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="400,8,0,0"/>
                                 <ScrollViewer Margin="326,35,627,10">
                                     <StackPanel Name="Attributes2"/>
                                 </ScrollViewer>
-                                <Label Content="Attributes Ex2:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="710,8,0,0"/>
+                                <Label Content="{DynamicResource labAttributesEx2}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="710,8,0,0"/>
                                 <ScrollViewer Margin="638,35,310,10">
                                     <StackPanel Name="Attributes3"/>
                                 </ScrollViewer>
-                                <Label Content="Attributes Ex3:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="1027,9,0,0"/>
+                                <Label Content="{DynamicResource labAttributesEx3}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="1027,9,0,0"/>
                                 <ScrollViewer Margin="955,35,10,10">
                                     <StackPanel Name="Attributes4"/>
                                 </ScrollViewer>
@@ -547,19 +547,19 @@
                         </TabItem>
                         <TabItem Header="{DynamicResource Attributes2}">
                             <Grid Name="Attributes2TabGrid">
-                                <Label Content="Attributes Ex4:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="83,9,0,0"/>
+                                <Label Content="{DynamicResource labAttributesEx4}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="83,9,0,0"/>
                                 <ScrollViewer Margin="10,35,940,10">
                                     <StackPanel x:Name="Attributes5"/>
                                 </ScrollViewer>
-                                <Label Content="Attributes Ex5:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="397,9,0,0"/>
+                                <Label Content="{DynamicResource labAttributesEx5}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="397,9,0,0"/>
                                 <ScrollViewer Margin="325,35,627,10">
                                     <StackPanel x:Name="Attributes6"/>
                                 </ScrollViewer>
-                                <Label Content="Attributes Ex6:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="708,9,0,0"/>
+                                <Label Content="{DynamicResource labAttributesEx6}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="708,9,0,0"/>
                                 <ScrollViewer Margin="638,35,310,10">
                                     <StackPanel x:Name="Attributes7"/>
                                 </ScrollViewer>
-                                <Label Content="Attributes Ex7:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="1025,9,0,0"/>
+                                <Label Content="{DynamicResource labAttributesEx7}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="1025,9,0,0"/>
                                 <ScrollViewer Margin="955,35,10,10">
                                     <StackPanel x:Name="Attributes8"/>
                                 </ScrollViewer>
@@ -567,11 +567,11 @@
                         </TabItem>
                         <TabItem Header="{DynamicResource Misc}">
                             <Grid>
-                                <Label Content="Creature Type:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="174.5,49,0,0"/>
+                                <Label Content="{DynamicResource labCreatureType}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="174.5,49,0,0"/>
                                 <ScrollViewer Margin="62,75,882,10">
                                     <StackPanel Name="TargetCreatureType"/>
                                 </ScrollViewer>
-                                <Label Content="Stances:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="569.5,49,0,0"/>
+                                <Label Content="{DynamicResource labStances}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="569.5,49,0,0"/>
                                 <ScrollViewer Margin="440,75,504,10">
                                     <StackPanel Name="StancesGrid"/>
                                 </ScrollViewer>
