Preliminary completion of multi - language switch button.

--- a/SpellGUIV2/App.xaml
+++ b/SpellGUIV2/App.xaml
@@ -5,14 +5,14 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <!-- We use the first ResourceDictionary for multiple languages. Use the internal enUS.xaml as the default.-->
+                <ResourceDictionary Source="pack://application:,,,/Languages/enUS.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseDark.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.AnimatedSingleRowTabControl.xaml" />
-                <!--ResourceDictionary Source="pack://SiteOfOrigin:,,,/Languages/enUS.xaml"/-->
-                <ResourceDictionary Source="pack://application:,,,/Languages/enUS.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
