--- a/SpellGUIV2/MainWindow.xaml
+++ b/SpellGUIV2/MainWindow.xaml
@@ -627,7 +627,7 @@
                     <TextBlock Text="{DynamicResource butSaveSpellChanges}" VerticalAlignment="Center"/>
                 </StackPanel>
             </Button>
-            <ComboBox Name="MultilingualSwitch" Foreground="White" Background="{x:Null}" BorderBrush="{x:Null}" SelectionChanged="MultilingualSwitch_SelectionChanged"/>
+            <ComboBox Name="MultilingualSwitch" Foreground="White" SelectionChanged="MultilingualSwitch_SelectionChanged" Initialized="MultilingualSwitch_Initialized" BorderBrush="{x:Null}" Background="{x:Null}"/>
         </controls:WindowCommands>
     </controls:MetroWindow.RightWindowCommands>
 </controls:MetroWindow>
